[gd_scene load_steps=15 format=2]

[ext_resource path="res://art/Gold/Gold_23.png" type="Texture" id=1]
[ext_resource path="res://art/Gold/Gold_22.png" type="Texture" id=2]
[ext_resource path="res://art/Gold/Gold_21.png" type="Texture" id=3]
[ext_resource path="res://art/Gold/Gold_24.png" type="Texture" id=4]
[ext_resource path="res://art/Gold/Gold_25.png" type="Texture" id=5]
[ext_resource path="res://art/Gold/Gold_27.png" type="Texture" id=6]
[ext_resource path="res://art/Gold/Gold_28.png" type="Texture" id=7]
[ext_resource path="res://art/Gold/Gold_29.png" type="Texture" id=8]
[ext_resource path="res://art/Gold/Gold_26.png" type="Texture" id=9]
[ext_resource path="res://art/Gold/Gold_30.png" type="Texture" id=10]
[ext_resource path="res://Coin.gd" type="Script" id=11]
[ext_resource path="res://art/mixkit-coins-sound-2003.wav" type="AudioStream" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]

[node name="Coin" type="Area2D"]
script = ExtResource( 11 )

[node name="coin_pickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = 24.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.195559, 0.0617582 )
scale = Vector2( -0.0350959, -0.034469 )
frames = SubResource( 1 )
frame = 7
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Coin_body_entered"]
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_Area2D_body_shape_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_Coin_body_shape_entered"]
[connection signal="collected_coin" from="." to="." method="_on_Area2D_collected_coin"]
